--- a/configserver/src/main/resources/bootstrap.yml
+++ b/configserver/src/main/resources/bootstrap.yml
@@ -3,15 +3,15 @@ spring:
     name: config-server
   profiles:
     active:
-    - native
+    - native, git
   cloud:
     config:
       server:
         native:
           search-locations: classpath:/config
-        #git:
-         # uri: https://github.com/ihuaylupo/config.git
-          #searchPaths: licensingservice
+        git:
+          uri: https://github.com/boulow/boulow-microservices.git
+          searchPaths: app-properties
     
 server:
   port: 8071
