--- a/configserver/src/main/resources/bootstrap.yml
+++ b/configserver/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/yguiathe/boulow-config/
+          uri: https://github.com/yguiathe/boulow-config.git
           default-label: main
           clone-on-start: true
           skip-ssl-validation: true
