--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -38,6 +38,14 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-stream-kafka</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
@@ -165,7 +173,6 @@
 				<executions>
 					<execution>
 						<id>default</id>
-						<phase>install</phase>
 						<goals>
 							<goal>build</goal>
 							<goal>push</goal>
