--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <module>tribe-service</module>
     <module>user-service</module>
     <module>account-service</module>
+    <module>document-service</module>
   </modules>
   <build>
     <plugins>
