Implements avatar uploads to AWS S3 (BLW10) and implements Transaction management (deposit, withdraw, and transfer methods) BL-8

--- a/configserver/src/main/resources/bootstrap.yml
+++ b/configserver/src/main/resources/bootstrap.yml
@@ -1,9 +1,14 @@
 spring:
   application:
     name: config-server
-  profiles:
-    active:
-    - git
+
+server:
+  port: 8071
+  
+---
+
+spring:
+  profiles: prod
   cloud:
     config:
       server:
@@ -12,6 +17,15 @@ spring:
           default-label: main
           clone-on-start: true
           skip-ssl-validation: true
-          
-server:
-  port: 8071
+
+---
+
+spring:
+  profiles:
+    active: composite
+  cloud:
+    config:
+      server:
+        composite:
+        - type: native
+          search-locations: file:///app/boulow-config
