--- a/configserver/Dockerfile
+++ b/configserver/Dockerfile
@@ -27,5 +27,8 @@ COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
 
+# Install curl utility
+RUN apt-get update && apt-get install -y curl
+
 # Execute the application
 ENTRYPOINT [ "java", "-cp", "app:app/lib/*", "com.boulow.configserver.ConfigurationServerApplication" ]
